advisor/parser/y.output

state 0
	$accept: .start $end 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 6
	select_no_parens  goto 3
	select_stmt  goto 2
	select_with_parens  goto 4
	simple_select  goto 5
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  select_stmt.    (1)

	.  reduce 1 (src line 212)


state 3
	select_stmt:  select_no_parens.    (2)

	.  reduce 2 (src line 226)


state 4
	select_stmt:  select_with_parens.    (3)
	select_clause:  select_with_parens.    (11)

	$end  reduce 3 (src line 228)
	.  reduce 11 (src line 292)


state 5
	select_no_parens:  simple_select.    (6)
	select_clause:  simple_select.    (10)

	$end  reduce 6 (src line 241)
	')'  reduce 6 (src line 241)
	.  reduce 10 (src line 290)


state 6
	select_no_parens:  select_clause.sort_clause 
	select_no_parens:  select_clause.opt_sort_clause for_locking_clause opt_select_limit 
	select_no_parens:  select_clause.opt_sort_clause select_limit opt_for_locking_clause 
	simple_select:  select_clause.UNION all_or_distinct select_clause 
	simple_select:  select_clause.INTERSECT all_or_distinct select_clause 
	simple_select:  select_clause.EXCEPT all_or_distinct select_clause 
	opt_sort_clause: .    (207)

	ORDER  shift 14
	UNION  shift 11
	EXCEPT  shift 13
	INTERSECT  shift 12
	.  reduce 207 (src line 1134)

	opt_sort_clause  goto 10
	sort_clause  goto 9

state 7
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 6
	select_no_parens  goto 15
	select_with_parens  goto 16
	simple_select  goto 5

state 8
	simple_select:  SELECT.opt_target_list into_clause from_clause where_clause group_clause having_clause 
	simple_select:  SELECT.distinct_clause target_list into_clause from_clause where_clause group_clause having_clause 
	opt_target_list: .    (116)

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  reduce 116 (src line 763)

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	opt_distinct  goto 20
	true_or_false  goto 50
	distinct_clause  goto 18
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 24
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	target_el  goto 21
	time_expr  goto 57
	variable  goto 32
	opt_target_list  goto 17
	target_list  goto 19

state 9
	select_no_parens:  select_clause sort_clause.    (7)
	opt_sort_clause:  sort_clause.    (206)

	$end  reduce 7 (src line 246)
	')'  reduce 7 (src line 246)
	.  reduce 206 (src line 1132)


state 10
	select_no_parens:  select_clause opt_sort_clause.for_locking_clause opt_select_limit 
	select_no_parens:  select_clause opt_sort_clause.select_limit opt_for_locking_clause 

	FOR  shift 86
	LIMIT  shift 90
	LOCK  shift 87
	OFFSET  shift 91
	.  error

	for_locking_clause  goto 84
	select_limit  goto 85
	offset_expr  goto 89
	limit_list  goto 88

state 11
	simple_select:  select_clause UNION.all_or_distinct select_clause 
	all_or_distinct: .    (159)

	ALL  shift 93
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 159 (src line 886)

	all_or_distinct  goto 92
	opt_distinct  goto 94

state 12
	simple_select:  select_clause INTERSECT.all_or_distinct select_clause 
	all_or_distinct: .    (159)

	ALL  shift 93
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 159 (src line 886)

	all_or_distinct  goto 95
	opt_distinct  goto 94

state 13
	simple_select:  select_clause EXCEPT.all_or_distinct select_clause 
	all_or_distinct: .    (159)

	ALL  shift 93
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 159 (src line 886)

	all_or_distinct  goto 96
	opt_distinct  goto 94

state 14
	sort_clause:  ORDER.BY sortby_list 

	BY  shift 97
	.  error


state 15
	select_with_parens:  '(' select_no_parens.')' 

	')'  shift 98
	.  error


state 16
	select_with_parens:  '(' select_with_parens.')' 
	select_clause:  select_with_parens.    (11)

	')'  shift 99
	.  reduce 11 (src line 292)


state 17
	simple_select:  SELECT opt_target_list.into_clause from_clause where_clause group_clause having_clause 
	into_clause: .    (163)

	INTO  shift 101
	.  reduce 163 (src line 901)

	into_clause  goto 100

state 18
	simple_select:  SELECT distinct_clause.target_list into_clause from_clause where_clause group_clause having_clause 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 24
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	target_el  goto 21
	time_expr  goto 57
	variable  goto 32
	target_list  goto 102

state 19
	opt_target_list:  target_list.    (115)
	target_list:  target_list.',' target_el 

	','  shift 103
	.  reduce 115 (src line 761)


state 20
	distinct_clause:  opt_distinct.    (156)

	.  reduce 156 (src line 875)


state 21
	target_list:  target_el.    (117)

	.  reduce 117 (src line 765)


state 22
	opt_distinct:  DISTINCT.    (160)

	.  reduce 160 (src line 888)


state 23
	opt_distinct:  DISTINCTROW.    (161)

	.  reduce 161 (src line 890)


state 24
	expr:  expr.OR expr 
	expr:  expr.OO expr 
	expr:  expr.XOR expr 
	expr:  expr.AND expr 
	expr:  expr.AA expr 
	target_el:  expr.opt_alias 
	opt_alias: .    (125)

	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 115
	SINGLE_QUOTA_STRING  shift 116
	STRING  shift 114
	AS  shift 111
	OR  shift 104
	OO  shift 105
	XOR  shift 106
	AND  shift 107
	AA  shift 108
	.  reduce 125 (src line 804)

	alias  goto 110
	alias_name  goto 112
	identifier  goto 113
	opt_alias  goto 109

state 25
	expr:  NOT.expr 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 117
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 26
	expr:  boolean_primary.    (23)
	expr:  boolean_primary.is_or_not true_or_false 
	boolean_primary:  boolean_primary.is_or_not NULL 
	boolean_primary:  boolean_primary.LEG predicate 
	boolean_primary:  boolean_primary.comparison_operator predicate 
	boolean_primary:  boolean_primary.comparison_operator subquery_type select_with_parens 

	'='  shift 122
	'<'  shift 126
	'>'  shift 124
	GE  shift 123
	LE  shift 125
	LG  shift 127
	LNE  shift 128
	LEG  shift 119
	IS  shift 121
	.  reduce 23 (src line 390)

	is_or_not  goto 118
	comparison_operator  goto 120

state 27
	boolean_primary:  predicate.    (29)

	.  reduce 29 (src line 416)


state 28
	predicate:  bit_expr.opt_not IN select_with_parens 
	predicate:  bit_expr.opt_not IN '(' expr_list ')' 
	predicate:  bit_expr.opt_not BETWEEN bit_expr AND predicate 
	predicate:  bit_expr.SOUNDS LIKE bit_expr 
	predicate:  bit_expr.opt_not LIKE simple_expr 
	predicate:  bit_expr.opt_not REGEXP bit_expr 
	predicate:  bit_expr.    (36)
	bit_expr:  bit_expr.'|' bit_expr 
	bit_expr:  bit_expr.'&' bit_expr 
	bit_expr:  bit_expr.SL bit_expr 
	bit_expr:  bit_expr.SR bit_expr 
	bit_expr:  bit_expr.'+' bit_expr 
	bit_expr:  bit_expr.'-' bit_expr 
	bit_expr:  bit_expr.'*' bit_expr 
	bit_expr:  bit_expr.'/' bit_expr 
	bit_expr:  bit_expr.DIV bit_expr 
	bit_expr:  bit_expr.MOD bit_expr 
	bit_expr:  bit_expr.'%' bit_expr 
	bit_expr:  bit_expr.'^' bit_expr 
	bit_expr:  bit_expr.'+' INTERVAL expr time_unit 
	bit_expr:  bit_expr.'-' INTERVAL expr time_unit 
	opt_not: .    (147)

	SOUNDS  shift 130
	BETWEEN  reduce 147 (src line 844)
	LIKE  reduce 147 (src line 844)
	REGEXP  reduce 147 (src line 844)
	IN  reduce 147 (src line 844)
	'|'  shift 131
	'&'  shift 132
	SL  shift 133
	SR  shift 134
	'+'  shift 135
	'-'  shift 136
	'*'  shift 137
	'/'  shift 138
	'%'  shift 141
	DIV  shift 139
	MOD  shift 140
	'^'  shift 142
	NOT  shift 143
	.  reduce 36 (src line 448)

	opt_not  goto 129

state 29
	bit_expr:  simple_expr.    (51)
	simple_expr:  simple_expr.COLLATE collation_name 

	COLLATE  shift 144
	.  reduce 51 (src line 475)


state 30
	simple_expr:  literal.    (52)

	.  reduce 52 (src line 480)


state 31
	simple_expr:  column_ref.    (53)

	.  reduce 53 (src line 482)


state 32
	simple_expr:  variable.    (54)

	.  reduce 54 (src line 483)


state 33
	simple_expr:  func_expr.    (55)

	.  reduce 55 (src line 484)


state 34
	simple_expr:  marker.    (56)

	.  reduce 56 (src line 485)


state 35
	simple_expr:  '+'.simple_expr 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 145
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 36
	simple_expr:  '-'.simple_expr 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 146
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 37
	simple_expr:  '~'.simple_expr 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 147
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 38
	simple_expr:  '!'.simple_expr 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 148
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 39
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 
	simple_expr:  '('.expr ')' 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SELECT  shift 8
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_clause  goto 6
	select_no_parens  goto 15
	select_with_parens  goto 149
	simple_select  goto 5
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 150
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 40
	simple_expr:  select_with_parens.    (63)

	.  reduce 63 (src line 517)


state 41
	simple_expr:  EXISTS.select_with_parens 

	'('  shift 7
	.  error

	select_with_parens  goto 151

state 42
	simple_expr:  case_expr.    (65)

	.  reduce 65 (src line 527)


state 43
	literal:  BIT_NUMBER.    (66)

	.  reduce 66 (src line 532)


state 44
	literal:  HEX_NUMBER.    (67)

	.  reduce 67 (src line 539)


state 45
	literal:  INTEGER.    (68)

	.  reduce 68 (src line 545)


state 46
	literal:  FLOAT.    (69)

	.  reduce 69 (src line 549)


state 47
	literal:  STRING.    (70)

	.  reduce 70 (src line 558)


state 48
	literal:  SINGLE_QUOTA_STRING.    (71)

	.  reduce 71 (src line 559)


state 49
	literal:  DOUBLE_QUOTA_STRING.    (72)

	.  reduce 72 (src line 565)


state 50
	literal:  true_or_false.    (73)

	.  reduce 73 (src line 571)


state 51
	literal:  NULL.    (74)

	.  reduce 74 (src line 572)


state 52
	column_ref:  identifier_or_star.    (81)

	.  reduce 81 (src line 596)


state 53
	identifier_or_star:  identifier.    (76)
	column_ref:  identifier.'.' identifier_or_star 
	column_ref:  identifier.'.' identifier '.' identifier_or_star 
	func_name:  identifier.    (122)

	'.'  shift 152
	'('  reduce 122 (src line 798)
	.  reduce 76 (src line 578)


state 54
	variable:  single_at_ident.    (78)

	.  reduce 78 (src line 588)


state 55
	variable:  double_at_ident.    (79)
	variable:  double_at_ident.'.' identifier 

	'.'  shift 153
	.  reduce 79 (src line 590)


state 56
	func_expr:  agg_expr.    (84)

	.  reduce 84 (src line 623)


state 57
	func_expr:  time_expr.    (85)

	.  reduce 85 (src line 628)


state 58
	func_expr:  cast_expr.    (86)

	.  reduce 86 (src line 632)


state 59
	func_expr:  str_expr.    (87)

	.  reduce 87 (src line 636)


state 60
	func_expr:  func_name.'(' ')' 
	func_expr:  func_name.'(' expr_list ')' 

	'('  shift 154
	.  error


state 61
	marker:  PARAM_MARKER.    (106)

	.  reduce 106 (src line 737)


state 62
	case_expr:  CASE.case_arg when_list else_arg END 
	case_arg: .    (109)

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  reduce 109 (src line 748)

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_arg  goto 155
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 156
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32

state 63
	true_or_false:  TRUE.    (132)

	.  reduce 132 (src line 817)


state 64
	true_or_false:  FALSE.    (133)

	.  reduce 133 (src line 819)


state 65
	identifier_or_star:  '*'.    (77)

	.  reduce 77 (src line 583)


state 66
	identifier:  IDENT.    (75)

	.  reduce 75 (src line 575)


state 67
	single_at_ident:  '@'.identifier 
	double_at_ident:  '@'.'@' identifier 

	IDENT  shift 66
	'@'  shift 158
	.  error

	identifier  goto 157

state 68
	agg_expr:  AVG.'(' all_or_distinct expr ')' 

	'('  shift 159
	.  error


state 69
	agg_expr:  COUNT.'(' opt_distinct expr_list ')' 
	agg_expr:  COUNT.'(' ALL expr ')' 
	agg_expr:  COUNT.'(' expr ')' 
	agg_expr:  COUNT.'(' '*' ')' 

	'('  shift 160
	.  error


state 70
	agg_expr:  MAX.'(' all_or_distinct expr ')' 

	'('  shift 161
	.  error


state 71
	agg_expr:  MIN.'(' all_or_distinct expr ')' 

	'('  shift 162
	.  error


state 72
	agg_expr:  SUM.'(' all_or_distinct expr ')' 

	'('  shift 163
	.  error


state 73
	time_expr:  func_name_time_add.'(' expr ',' INTERVAL expr time_unit ')' 

	'('  shift 164
	.  error


state 74
	time_expr:  func_name_time_sub.'(' expr ',' INTERVAL expr time_unit ')' 

	'('  shift 165
	.  error


state 75
	cast_expr:  CAST.'(' expr AS cast_type ')' 

	'('  shift 166
	.  error


state 76
	cast_expr:  CONVERT.'(' expr ',' cast_type ')' 
	cast_expr:  CONVERT.'(' expr USING cast_type ')' 

	'('  shift 167
	.  error


state 77
	str_expr:  POSITION.'(' bit_expr IN expr ')' 

	'('  shift 168
	.  error


state 78
	func_name:  keyword_as_func.    (123)

	.  reduce 123 (src line 800)


state 79
	func_name_time_add:  BuiltinFucTimeAddIdent.    (154)

	.  reduce 154 (src line 862)


state 80
	func_name_time_sub:  BuiltinFucTimeSubIdent.    (155)

	.  reduce 155 (src line 865)


state 81
	keyword_as_func:  LEFT.    (150)

	.  reduce 150 (src line 854)


state 82
	keyword_as_func:  IN.    (151)

	.  reduce 151 (src line 856)


state 83
	keyword_as_func:  IS.    (152)

	.  reduce 152 (src line 857)


state 84
	select_no_parens:  select_clause opt_sort_clause for_locking_clause.opt_select_limit 
	opt_select_limit: .    (220)

	LIMIT  shift 90
	OFFSET  shift 91
	.  reduce 220 (src line 1194)

	opt_select_limit  goto 169
	select_limit  goto 170
	offset_expr  goto 89
	limit_list  goto 88

state 85
	select_no_parens:  select_clause opt_sort_clause select_limit.opt_for_locking_clause 
	opt_for_locking_clause: .    (216)

	FOR  shift 86
	LOCK  shift 87
	.  reduce 216 (src line 1164)

	for_locking_clause  goto 172
	opt_for_locking_clause  goto 171

state 86
	for_locking_clause:  FOR.UPDATE 

	UPDATE  shift 173
	.  error


state 87
	for_locking_clause:  LOCK.IN SHARE MODE 

	IN  shift 174
	.  error


state 88
	select_limit:  limit_list.offset_expr 
	select_limit:  limit_list.    (223)

	OFFSET  shift 91
	.  reduce 223 (src line 1204)

	offset_expr  goto 175

state 89
	select_limit:  offset_expr.limit_list 
	select_limit:  offset_expr.    (224)

	LIMIT  shift 90
	.  reduce 224 (src line 1205)

	limit_list  goto 176

state 90
	limit_list:  LIMIT.rows 
	limit_list:  LIMIT.rows ',' rows_offset 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  error

	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	true_or_false  goto 50
	select_with_parens  goto 40
	double_at_ident  goto 55
	func_name  goto 60
	identifier  goto 53
	identifier_or_star  goto 52
	keyword_as_func  goto 78
	single_at_ident  goto 54
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	cast_expr  goto 58
	column_ref  goto 31
	expr  goto 178
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	str_expr  goto 59
	time_expr  goto 57
	variable  goto 32
	rows  goto 177

state 91
	offset_expr:  OFFSET.rows_offset 

	BuiltinFucTimeAddIdent  shift 79
	BuiltinFucTimeSubIdent  shift 80
	IDENT  shift 66
	DOUBLE_QUOTA_STRING  shift 49
	PARAM_MARKER  shift 61
	SINGLE_QUOTA_STRING  shift 48
	STRING  shift 47
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	INTEGER  shift 45
	FLOAT  shift 46
	AVG  shift 68
	CAST  shift 75
	CONVERT  shift 76
	COUNT  shift 69
	FALSE  shift 64
	MAX  shift 70
	MIN  shift 71
	NULL  shift 51
	POSITION  shift 77
	SUM  shift 72
	TRUE  shift 63
	EXISTS  shift 41
	LEFT  shift 81
	CASE  shift 62
	IN  shift 82
	IS  shift 83
	'+'  shift 35
	'-'  shift 36
	'*'  shift 65
	'~'  shift 37
	'!'  shift 38
	NOT  shift 25
	'('  shift 39
	'@'  shift 67
	.  error
